# ffcharge

./: Cargo.toml  README.md  build.rs
data/: README.md  charges.csv
src/: lib.rs  position.rs
src/scheme/: dna.rs  ion.rs  mod.rs  nucleic.rs  protein.rs  rna.rs  water.rs
tests/: charge.rs
