[package]
name = "ffcharge"
version = "0.1.0"
authors = ["Tony Kan <tianchengkan@gmail.com>"]
license = "MIT"
repository = "https://github.com/TKanX/ffcharge"
edition = "2024"
description = "A lightweight pure Rust library for fast, residue-based force field charge assignment (AMBER/CHARMM) in molecular modeling pipelines."
keywords = [
    "chemistry",
    "partial-charges",
    "molecular-dynamics",
    "force-fields",
    "no-std",
]
categories = ["science", "science::bioinformatics", "simulation"]
readme = "README.md"

[lib]
name = "ffcharge"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
