[package]
name = "ffcharge"
version = "0.2.1"
authors = ["Tony Kan <tianchengkan@gmail.com>"]
license = "MIT"
repository = "https://github.com/TKanX/ffcharge"
edition = "2024"
description = "A lightweight pure Rust library for fast, residue-based force field charge assignment (AMBER/CHARMM) in molecular modeling pipelines."
keywords = [
    "chemistry",
    "partial-charges",
    "molecular-dynamics",
    "force-fields",
    "no-std",
]
categories = [
    "science::computational-chemistry::molecular-simulation",
    "no-std",
]
readme = "README.md"

[dependencies]
phf = { version = "0.13.1", default-features = false }

[dev-dependencies]
pastey = "0.2.1"

[build-dependencies]
phf_codegen = "0.13.1"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }

[lib]
name = "ffcharge"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
